# shape-of-my-words

./: README.md  package-lock.json
backend/: README_ENV.md  app.py  models.py  pyproject.toml  test_api.py  utils.py
backend/data/: nb_embeddings_enko.pt  pca_model_enko.joblib  topics.json
backend/data/cache/: words_art.json  words_education.json  words_emotion.json  words_food.json  words_nature.json  words_sports.json  words_travel.json
backend/scripts/: prepare_pca_data.py
backend/services/: openrouter.py  word_generator.py
frontend/: package-lock.json  package.json
frontend/app/: action.ts  page.tsx  sketch.tsx
frontend/components/: GameHUD.tsx  GameOver.tsx  IntegratedWordGame.tsx  MainApp.tsx  PauseScreen.tsx  StageComplete.tsx  StageSelector.tsx  StageStart.tsx  StreamingProgress.tsx  TopicSelector.tsx  WordRain.tsx  WordRainApp.tsx
frontend/hooks/: useDynamicTopics.ts  useStreamingWords.ts  useWords.ts
frontend/types/: game.ts  words.ts
frontend/utils/: gameConfig.ts
